# cgb

./: CMakeLists.txt  build.sh  debug.sh  test
src/: linked_list.c  linked_list.h  main.c  shift_register.c  shift_register.h  utility.h
src/backend/: cpu.c  cpu.h  events.c  events.h  memory.c  memory.h  ppu.c  ppu.h  scheduler.c  scheduler.h
src/frontend/: display.c  display.h
